--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles.css" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
+  <link href="https://fonts.cdnfonts.com/css/futura-pt" rel="stylesheet">
   <title>Menu</title>
 </head>
 <body class='body overflow_hide'>
@@ -20,47 +21,58 @@
     <img src="./images/iskra_logo.svg" alt="logo">
   </div>
 
-
-  <div class="middle">
-    <div class="slider-container icon_menu">
-      <span class="bar">
-        <span class="fill"></span>
-        <span class="title">МЕНЮ</span>
-      </span>
-      <input id="slider" class="slider" type="range" min="0" max="99" value="0">
+  <div class="buttons">
+    <div class="middle">
+      <div class="slider-container icon_menu">
+        <span class="bar">
+          <span class="fill"></span>
+          <span class="title">МЕНЮ</span>
+        </span>
+        <input id="slider" class="slider" type="range" min="0" max="99" value="0">
+      </div>
     </div>
-  </div>
-
-  <div class="middle">
-    <div class="slider-container icon_inst">
-      <span class="bar">
-        <span class="fill"></span>
-        <span class="title">ИНСТ</span>
-      </span>
-      <input id="slider" class="slider" type="range" min="0" max="99" value="0">
+  
+    <div class="middle">
+      <div class="slider-container icon_inst">
+        <span class="bar">
+          <span class="fill"></span>
+          <span class="title">ИНСТ</span>
+        </span>
+        <input id="slider" class="slider" type="range" min="0" max="99" value="0">
+      </div>
     </div>
-  </div>
-
-  <div class="middle">
-    <div class="slider-container icon_rate">
-      <span class="bar">
-        <span class="fill"></span>
-        <span class="title">ОТЗЫВЫ</span>
-      </span>
-      <input id="slider" class="slider" type="range" min="0" max="99" value="0">
+  
+    <div class="middle">
+      <div class="slider-container icon_rate">
+        <span class="bar">
+          <span class="fill"></span>
+          <span class="title">ОТЗЫВЫ</span>
+        </span>
+        <input id="slider" class="slider" type="range" min="0" max="99" value="0">
+      </div>
     </div>
-  </div>
-
-  <div class="middle">
-    <div class="slider-container icon_tips">
-      <span class="bar">
-        <span class="fill"></span>
-        <span class="title">ЧАЕВЫЕ</span>
-      </span>
-      <input id="slider" class="slider" type="range" min="0" max="99" value="0">
+  
+    <div class="middle">
+      <div class="slider-container icon_tips">
+        <span class="bar">
+          <span class="fill"></span>
+          <span class="title">ЧАЕВЫЕ</span>
+        </span>
+        <input id="slider" class="slider" type="range" min="0" max="99" value="0">
+      </div>
     </div>
   </div>
   
+  <div class="footer">
+    <div>
+      <span>Адрес</span>
+      <p>1-я Советская, д.6, к.2</p>
+    </div>
+    <div>
+      <span>Пароль от Wi-Fi:</span>
+      <p>29415281</p>
+    </div>
+  </div>
 </body>
 <script src='script.js'></script>
 </html>
