--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
       <p>29415281</p>
     </div>
   </div>
+
+  <a class="hidden_link inst_link" href="https://instagram.com/iskra_lounge?igshid=MmJiY2I4NDBkZg==">Hide</a>
+  <a class="hidden_link review_link" href="https://netmonet.co/tip/444047?o=0">Hide</a>
+  <a class="hidden_link netmonet_link" href="https://netmonet.co/tip/444047?o=0">Hide</a>
 </body>
 <script src='script.js'></script>
 </html>
