--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
   <title>Menu</title>
 </head>
 <body class='body overflow_hide'>
-  <div class="pages">
+  <div class="pages overflow_hide">
     <button class='button_back'>
       <img src="./images/backbuttonnew.png" width="46px" height="46px" alt="back">
     </button>
-    <img class='page' src="./images/full_menu.jpg" alt="page">
+    <img class='page overflow_hide' src="./images/full_menu.jpg" alt="page">
   </div>
+
+
 
   <div class="logo">
     <img src="./images/iskra_logo.svg" alt="logo">
   </div>
-
-  <div class="buttons">
+  
     <div class="middle">
       <div class="slider-container icon_menu">
         <span class="bar">
@@ -61,7 +62,6 @@
         <input id="slider" class="slider" type="range" min="0" max="99" value="0">
       </div>
     </div>
-  </div>
   
   <div class="footer">
     <div>
