--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   
   <div class="footer">
     <div>
-      <span>Адрес</span>
+      <span>Адрес:</span>
       <p>1-я Советская, д.6, к.2</p>
     </div>
     <div>
@@ -75,7 +75,7 @@
   </div>
 
   <a class="hidden_link inst_link" href="https://instagram.com/iskra_lounge?igshid=MmJiY2I4NDBkZg==">Hide</a>
-  <a class="hidden_link review_link" href="https://netmonet.co/tip/444047?o=0">Hide</a>
+  <a class="hidden_link review_link" href="https://2gis.ru/spb/geo/70000001070316252">Hide</a>
   <a class="hidden_link netmonet_link" href="https://netmonet.co/tip/444047?o=0">Hide</a>
 </body>
 <script src='script.js'></script>
