--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
   <a class="hidden_link inst_link" href="https://instagram.com/iskra_lounge?igshid=MmJiY2I4NDBkZg==">Hide</a>
   <a class="hidden_link review_link" href="https://2gis.ru/spb/geo/70000001070316252">Hide</a>
-  <a class="hidden_link netmonet_link" href="https://netmonet.co/tip/444047?o=0">Hide</a>
+  <a class="hidden_link netmonet_link" href="https://2gis.ru/spb/geo/70000001070316252">Hide</a>
 </body>
 <script src='script.js'></script>
 </html>
