-m (fixed logo position)

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
     <button class='button_back'>
       <img src="./images/backbuttonnew.png" width="60px" height="60px" alt="back">
     </button>
-    <img class='page overflow_hide' src="./images/full_menu.jpg" alt="page">
+    <div class="logo logo_menu">
+      <img class="logo-image" src="./images/iskra_logo.svg" alt="logo">
+    </div>
+    <img class='page overflow_hide' src="./images/full_menu_no-logo.jpg" alt="page">
   </div>
 
 
 
   <div class="logo">
-    <img src="./images/iskra_logo.svg" alt="logo">
+    <img class="logo-image" src="./images/iskra_logo.svg" alt="logo">
   </div>
   
     <div class="middle">
