-m (netmonet link added)

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   <a class="hidden_link inst_link" href="instagram://user?username=iskra_lounge">Hide</a>
   <a class="hidden_link review_link" href="https://2gis.ru/spb/geo/70000001070316252">Hide</a>
-  <a class="hidden_link netmonet_link" href="https://2gis.ru/spb/geo/70000001070316252">Hide</a>
+  <a class="hidden_link netmonet_link" href="https://netmonet.co/tip/488098?o=0">Hide</a>
 </body>
 <script src='script.js'></script>
 </html>
