-m (changed to svg back button)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class='body overflow_hide'>
   <div class="pages overflow_hide">
     <button class='button_back'>
-      <img src="./images/backbuttonnew.png" width="60px" height="60px" alt="back">
+      <img src="./images/backbuttonnew.svg" width="60px" height="60px" alt="back">
     </button>
     <div class="logo logo_menu">
       <img class="logo-image" src="./images/iskra_logo.svg" alt="logo">
