--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <div class="logo">
     <img class="logo-image" src="./images/iskra_logo.svg" alt="logo">
   </div>
+
+    <div class="animation">
+      <img src="./images/palec.svg" alt="palec" class="palec">
+      <div class="ellipse"></div>
+    </div>
   
     <div class="middle">
       <div class="slider-container icon_menu">
