--- a/index.html
+++ b/index.html
@@ -25,51 +25,28 @@
   <div class="logo">
     <img class="logo-image" src="./images/iskra_logo.svg" alt="logo">
   </div>
+  
+    <button class="middle">
+      <img style="top: 17px" src='./images/icon_menu.svg'/>
+      <p>МЕНЮ</p>
+    </button>
 
-    <div class="animation">
-      <img src="./images/palec.svg" alt="palec" class="palec">
-      <div class="ellipse"></div>
-    </div>
+    <button class="middle">
+      <img style="top: 15px" src='./images/inst_icon.svg'/>
+      <p>ИНСТ</p>
+    </button>
+
+    <button class="middle">
+      <img style="top: 15px" src='./images/rate_icon.svg'/>
+      <p>ОТЗЫВЫ</p>
+    </button>
+
+    <button class="middle">
+      <img style="top: 15px" src='./images/tips_icon.svg'/>
+      <p>ЧАЕВЫЕ</p>
+    </button>
+    
   
-    <div class="middle">
-      <div class="slider-container icon_menu">
-        <span class="bar">
-          <span class="fill"></span>
-          <span class="title">МЕНЮ</span>
-        </span>
-        <input id="slider" class="slider" type="range" min="0" max="99" value="0">
-      </div>
-    </div>
-  
-    <div class="middle">
-      <div class="slider-container icon_inst">
-        <span class="bar">
-          <span class="fill"></span>
-          <span class="title">ИНСТ</span>
-        </span>
-        <input id="slider" class="slider" type="range" min="0" max="99" value="0">
-      </div>
-    </div>
-  
-    <div class="middle">
-      <div class="slider-container icon_rate">
-        <span class="bar">
-          <span class="fill"></span>
-          <span class="title">ОТЗЫВЫ</span>
-        </span>
-        <input id="slider" class="slider" type="range" min="0" max="99" value="0">
-      </div>
-    </div>
-  
-    <div class="middle">
-      <div class="slider-container icon_tips">
-        <span class="bar">
-          <span class="fill"></span>
-          <span class="title">ЧАЕВЫЕ</span>
-        </span>
-        <input id="slider" class="slider" type="range" min="0" max="99" value="0">
-      </div>
-    </div>
   
   <div class="footer">
     <div>
